2010-03-16 Holger Vogt
 * xpressn.c: remove lines 291,292

2010-03-09 Dietmar Warning
 * analysis/cktop.c: remove the CR in some printf's, need some tests with different terminals
 * frontend/inp.c: cut the ouput message if wrong parameter warning to have a chance 
   to read it
 * parser/inpgmod.c: want only the parameter names in output - not the values
 * devices/vbic/vbic.c: correct a typo of eais/eaic model parameter leading in wrong 
   temperature model

2010-03-08 Holger Vogt
 * parse.c, inpptree.c, inpptree-parser.y, inpptree-parser.c, inpptree-parser.h: 
   patches by R. Larice

2010-03-07 Holger Vogt
 * inpcom.c: test for .end improved (comments are now allowed in .end line)
 * xpressn.c: adding fcn sgn() to numparam function lib
 * inpptree.h,asrcacld.c,asrcload.c,asrcpzld.c,asrcset.c,ifeval.c,inpptree-parser.c,
   inpptree-parser.h,inpptree-parser.y,inpptree.c: patch R. Larice, add time and temper
   variables to B source

2010-03-07 Dietmar Warning
 * analysis/ninteg.c: limiting exp() in noise integration to prevent overflow and NAN 
  (ID: 2950943).

2010-02-28 Dietmar Warning
 * com_gnuplot.c, gnuplot.c: cosmetics - missing LF on end
 * fteext.h: complete prototypes for typesdef.c
 * com_fft.c, com_fft.h: improve amplitude accuracy by considering zero padded vectors
   correct the gaussian window, add the flattop window, precise the FFT information, clean-up
 * cplsetup.c, cplload.c: omit complains from icc

2010-02-28 Holger Vogt
 * inpcom.c, xpressn.c, inpptree.h, spicelib/parser/makefile.am, inpptree.c, 
   ptfuncs.c, inpptree-parser.y: replace parser for B source with BISON generated one.
   Patch 2 from R. Larice
   
2010-02-27 Holger Vogt
 * command.c, gnuplot.c, gnuplot.h, com_gnuplot.c, com_gnuplot.h, plotit.c:
   new command 'wrdata file vecs' for simple tabular printout of data

2010-02-26 Holger Vogt
 * vsrc.c, vsrcacct.c, vsrcask.c, vsrcdefs.h, vsrcload.c, vsrcpar.c: