@@ -2,7 +2,7 @@
 Copyright 1990 Regents of the University of California.  All rights reserved.
 Author: 1987 Wayne A. Christopher, U. C. Berkeley CAD Group 
 **********/
-// #define TRACE
+/*#define TRACE*/
 
 #include "ngspice.h"
 #include "ifsim.h"
